--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-
-      <!-- CSS file -->
+  <meta charset="utf-8" />
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
-
+  <title>Tourism in Australia</title>
 </head>
 <body>
+  <div class="page-container">
+    <h2 style="text-align:center; margin: 20px;">Tourism in Australia</h2>
 
-<div class="toolbar">
-  <span id="region-select"></span>
-</div>
-<div id="vis"></div>
+    <div class="toolbar">
+      <span id="region-select"></span> 
+    </div>
 
+    <div id="vis-map" class="vis-block"></div>
+    <div id="vis-arrivals" class="vis-block"></div>
+    <div id="vis-purpose" class="vis-block"></div>
+  </div>
 
-<div id="map"></div>
+  <script type="text/javascript">
+    let mapView, barView;
 
-<script type="text/javascript">
+    vegaEmbed('#vis-map', 'js/map_vis.json').then(({view}) => {
+      mapView = view;
 
-  var spec2 = "js/vega_lite_vis.json";
-  vegaEmbed('#map', spec2).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-  }).catch(console.error);
-</script>
+      mapView.addSignalListener('Region_selection', (_, value) => {
+        if (barView) {
+          barView.signal('Region_selection', value).run();
+        }
+      });
+    }).catch(console.error);
 
+    vegaEmbed('#vis-arrivals', 'js/arrivals_departures.json')
+      .catch(console.error);
+
+    vegaEmbed('#vis-purpose', 'js/trips_by_purpose.json').then(({view}) => {
+      barView = view;
+    }).catch(console.error);
+  </script>
 </body>
 </html>
