--- a/index.html
+++ b/index.html
@@ -33,17 +33,25 @@
       </div>
     </div>
 
-    <div class="pure-g">
-    <div class="pure-u-1" style="margin-top: -40px">
-        <p>Tourism is one of the most important drivers of 
-          the Australian economy, attracting millions of domestic and 
-          international visitors every year. This dashboard provides an overview of 
-          tourism activity across Australia, highlighting trends in travel, popular destinations, 
-          and the purposes of trips.</p>
-                  <p> ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- </p>
+<div class="pure-g" style="margin-top:-40px; text-align:justify;">
+  <div class="pure-u-1-2" style="padding-right:20px;">
+    <p>
+      Tourism is one of the most important drivers of the Australian economy, attracting millions of
+      domestic and international visitors every year. This dashboard provides an overview of tourism
+      activity across Australia.
+    </p>
+  </div>
 
-      </div>
-    </div>
+  <div class="pure-u-1-3">
+    <p>
+      It highlights trends in travel, popular destinations, and the purposes of trips. Tourism generates
+      significant income, creates jobs, and strengthens cultural ties with the rest of the world.
+    </p>
+  </div>
+</div>
+
+
+
 
     <div class="pure-g">
       <div class="pure-u-1">
@@ -101,30 +109,30 @@
 
 
 
+      <div>    
+        <div class= "description" style="margin-top:40px;">
+        <h2>Purpose of the trip</h2>
+      </div>
 
-
-    <div class="pure-g">
-      <div class="pure-u-1">
-      <div class="pure-u-1">
-        <div class="description description-right" style="margin-top: 40px;" >
-          <h2>Purpose of the trip</h2>
-          <p>Understanding why people travel to Australia is essential 
-            for analyzing the tourism industry. Different purposes of travel 
-            such as holidays, visiting relatives, or business, highlight the 
-            diverse roles that tourism plays in the economy and society. 
-            Looking at the breakdown of trip purposes helps identify which 
-            segments are the most significant and how they contribute to overall travel demand.</p>
+      <div class="pure-g">   
+        <div class="pure-u-1 pure-u-md-2-3" >
+          <div id="vis-bars" class="vis-container" style="max-width: 95%;"> </div>
         </div>
-              <div class="pure-u-1">
-        <div id="vis-bars" class="vis-container"></div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+          <p>
+            Understanding why people travel to Australia is essential for analyzing the tourism industry.
+          </p>
+          <p>Different purposes of travel such as holidays, visiting relatives, or business, highlight the
+            diverse roles that tourism plays in the economy and society.</p>
+          <p>Looking at the breakdown of trip purposes helps identify which segments are the most significant and how they contribute to overall travel demand.</p>
+        </div>
+
+
+
+
+
       </div>
-      </div>
-    </div>
-
-
-
-
-
 
 
 
@@ -134,7 +142,7 @@
                 <p> ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- </p>
 
         <p>A visualisation by Jorge Galvan</p>
-        <p>Date: 13/Oct/2025</p>
+        <p>Date: 19/Oct/2025</p>
         <p>Data from: https://www.abs.gov.au/statistics/industry/tourism-and-transport </p>
         <p>https://www.kaggle.com/datasets/luisblanche/quarterly-tourism-in-australia?resource=download&select=tourism.csv </p>
         <p>https://simplemaps.com/data/au-cities </p>
